	--- 9.15.0 released ---

5233.	[bug]		Negative trust anchors did not work with "forward only;"
			to validating resolvers. [GL #997]

5232.	[placeholder]

5231.	[protocol]	Add support for displaying CLIENT-TAG and SERVER-TAG.
			[GL #960]

5230.	[protocol]	The SHA-1 hash algorithm is no longer used when
			generating DS and CDS records. [GL #1015]

5229.	[protocol]	Enforce known SSHFP fingerprint lengths. [GL #852]

5228.	[func]		If trusted-keys and managed-keys were configured
			simultaneously for the same name, the key could
			not be be rolled automatically. This is now
			a fatal configuration error. [GL #868]

5227.	[placeholder]

5226.	[placeholder]

5225.	[func]		Allow dig to print out AAAA record fully expanded.
			with +[no]expandaaaa. [GL #765]

5224.	[bug]		Only test provide-ixfr on TCP streams. [GL #991]

5223.	[bug]		Fixed a race in the filter-aaaa plugin accessing
			the hash table. [GL #1005]

5222.	[bug]		'delv -t ANY' could leak memory. [GL #983]

5221.	[test]		Enable parallel execution of system tests on
			Windows. [GL !4101]

5220.	[cleanup]	Refactor the isc_stat structure to take advantage
			of stdatomic. [GL !1493]

5219.	[bug]		Fixed a race in the filter-aaaa plugin that could
			trigger a crash when returning an instance object
			to the memory pool. [GL #982]

5218.	[bug]		Conditionally include <dlfcn.h>. [GL #995]

5217.	[bug]		Restore key id calculation for RSAMD5. [GL #996]

5216.	[bug]		Fetches-per-zone counter wasn't updated correctly
			when doing qname minimization. [GL #992]

5215.	[bug]		Change #5124 was incomplete; named could still
			return FORMERR instead of SERVFAIL in some cases.
			[GL #990]

5214.	[bug]		win32: named now removes its lock file upon shutdown.
			[GL #979]

5213.	[bug]		win32: Eliminated a race which allowed named.exe running
			as a service to be killed prematurely during shutdown.
			[GL #978]

5212.	[placeholder]

5211.	[bug]		Allow out-of-zone additional data to be included