@@ -1,3 +1,6 @@
+5234.	[port]		arm: just use the compiler's default support for
+			yield. [GL #981]
+
 	--- 9.15.0 released ---
 
 5233.	[bug]		Negative trust anchors did not work with "forward only;"
